--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+:root{
+  background-color: #101419;
+}
+
+.container{
+  max-width: 1150px;
+  margin: auto;
+}
+
 /*:root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
