--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,11 +4,27 @@
 
 :root{
   background-color: #101419;
+
+  margin: 0;
+  padding: 0;
+}
+
+/* index.css */
+html, body {
+  height: 100%;
+  margin: 0;
 }
 
 .container{
   max-width: 1150px;
   margin: auto;
+}
+
+::-webkit-scrollbar {
+  width: 15px;
+}
+::-webkit-scrollbar-thumb {
+  background: #666363;
 }
 
 /*:root {
